--- a/index.css
+++ b/index.css
@@ -23,13 +23,14 @@ body {
   height: 5vh;
   bottom: 0px;
   position: fixed;
-  background-color: #E1E1DE;
+  background-color: #FFAD1D;
 }
 
 #credit_text {
   margin: 0px;
   text-align: center;
   line-height: 5vh;
+  font-size: 1.5em;
 }
 
 iframe {
@@ -64,10 +65,14 @@ iframe {
   display: block;
   font-family: 'EB Garamond';
   color: #00196E;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 64px auto;
+  transition: 0.08s;
 }
 
 #start_button:hover {
   background-color: #CEEDF6;
+}
+
+#sidebar_init {
+  padding: 32px;
 }
